# RMshoot

./: CAN_README.md  CMakeLists.txt  README.md  USB转CAN通信修改报告.md  autostart.sh  quick_can_test.sh  readme.md  setup_can.sh  test_window.cpp  视觉调试使用指南.md  预测代码分析报告.md
CH341SER_LINUX/driver/: ch341.ko  ch341.mod.c  modules.order
calibration/: capture_chess.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  demo.yaml  example.yaml  mvs.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
daheng_camera_driver/: CMakeLists.txt  linux指令.sh
daheng_camera_driver/install/: local_setup.sh  setup.sh
daheng_camera_driver/launch/: camera.launch.py
daheng_camera_driver/src/: daheng_camera.cpp
daheng_camera_driver/src/daheng_camera_driver/: daheng_camera.hpp  image_publisher.hpp
daheng_camera_driver/src/install/: local_setup.sh  setup.sh
io/: CMakeLists.txt  camera.cpp  camera.hpp
io/daheng/: daheng.cpp  daheng.hpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/mindvision/: mindvision.cpp  mindvision.hpp
ros框架下的射击模块/armor_detector/: CMakeLists.txt
ros框架下的射击模块/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  armor_pose_estimator.cpp
src/: auto_aim_debug_mpc.cpp  uav_debug.cpp
tasks/auto_aim/: classifier.cpp
tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov8.cpp
tasks/auto_buff/: yolo11_buff.cpp
tests/: detector_video_test.cpp
